--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
     "file-saver": "^2.0.5",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "input-otp": "1.4.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "^15.5.2",
     "next-themes": "latest",
-     "react": "^18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
@@ -63,6 +65,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/firebase": "^2.4.32",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
