Disable authentication and persona providers
Commented out or disabled all authentication and persona provider code, renamed related files with .DISABLED suffix, and updated imports accordingly. This effectively removes authentication and persona context functionality from the app while preserving the code for future re-enablement.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ yarn-error.log*
 
 # env files
 .env*
+.env
+.env.local
 
 # vercel
 .vercel
@@ -28,3 +30,6 @@ next-env.d.ts
 
 # firebase
 make-ebook/firebase.ts
+
+# firebase
+make-ebook/components/AuthProvider.tsx
