--- a/package.json
+++ b/package.json
@@ -37,11 +37,20 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tinymce/tinymce-react": "^6.3.0",
+    "@tiptap/extension-link": "^3.4.2",
+    "@tiptap/extension-text-align": "^3.4.2",
+    "@tiptap/extension-underline": "^3.4.2",
+    "@tiptap/pm": "^3.4.2",
+    "@tiptap/react": "^3.4.2",
+    "@tiptap/starter-kit": "^3.4.2",
+    "@types/draft-js": "^0.11.18",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
+    "draft-js": "^0.11.7",
     "embla-carousel-react": "8.5.1",
     "file-saver": "^2.0.5",
     "firebase": "^12.2.1",
@@ -55,6 +64,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sanitize-html": "^2.17.0",
