--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
