Add document import feature to ebook editor
Introduces a document import dialog allowing users to upload .txt, .doc, .docx, or .pdf files and automatically parse chapters and metadata into a new book. Adds documentParser utility for file parsing, updates sidebar and mobile UI to include import button, and improves pasted content handling in the rich text editor. Dependencies for mammoth and pdfjs-dist are added for document parsing support.

--- a/package.json
+++ b/package.json
@@ -74,8 +74,10 @@
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.11.0",
     "next": "15.5.9",
     "next-themes": "latest",
+    "pdfjs-dist": "^5.4.530",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "^18.2.0",
