Add EPUB preview modal and improve editor UX
Introduces an EPUBReaderModal component for in-app EPUB preview after export, with support for navigation and keyboard controls. Enhances the RichTextEditor with modals for endnote and image caption insertion, improves accessibility and tooltips, and updates placeholder/help text for metadata fields. Also updates exportEpub to optionally return a Blob for preview, and refines endnote navigation logic for better bidirectional linking between chapters and endnotes.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "8.5.1",
+    "epubjs": "^0.3.93",
     "file-saver": "^2.0.5",
     "input-otp": "1.4.1",
     "jszip": "^3.10.1",
