--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tiptap/pm": "^3.4.2",
     "@tiptap/react": "^3.4.2",
     "@tiptap/starter-kit": "^3.4.2",
+    "@tldraw/assets": "^4.3.1",
     "@types/dompurify": "^3.0.5",
     "@types/draft-js": "^0.11.18",
     "@types/katex": "^0.16.7",
@@ -78,6 +79,7 @@
     "mammoth": "^1.11.0",
     "next": "^16.1.6",
     "next-themes": "latest",
+    "openai": "^6.17.0",
     "pdfjs-dist": "^5.4.530",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
@@ -93,6 +95,7 @@
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tldraw": "^4.3.1",
     "uuid": "^13.0.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
