Add Stripe billing, subscription APIs & UI
Introduce full subscription support and Pro feature gating. Adds server endpoints for Stripe integration: /api/checkout, /api/customer-portal, /api/subscription, and a robust /api/webhooks/stripe handler (verifies signatures, syncs subscription state). Book Mind AI route now enforces Pro access (runtime changed to nodejs) using Supabase server client and getUserSubscriptionTier. Client-side: wire up SubscriptionProvider in layout and add subscription UI components (SubscriptionBadge, ManageBillingButton, UpgradeModal), gated Book Mind UI with checkout flow, and update AutoSaveIndicator to reflect cloud sync. Persistency: DB schema/users updated, two migration SQLs and helper scripts added, plus a new useSubscription hook. Misc: cleanup .DS_Store files and update package.json.

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,4 @@ next-env.d.ts
 make-ebook/firebase.ts
 
 # firebase
-make-ebook/components/AuthProvider.tsx
+make-ebook/components/AuthProvider.tsx.DS_Store
