--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "test:accounts": "tsx scripts/setup-test-accounts.ts"
   },
   "engines": {
     "node": ">=18.17.0",
@@ -66,6 +67,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.7",
+    "dotenv": "^17.2.3",
     "draft-js": "^0.11.7",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.44.5",
@@ -106,6 +108,7 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
