--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/draft-js": "^0.11.18",
     "@types/pg": "^8.15.5",
+    "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
