--- a/public/makeebook-manifest.json
+++ b/public/makeebook-manifest.json
@@ -9,13 +9,13 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "/makeebook-icon-192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/makeebook-icon-512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -42,7 +42,7 @@
       "short_name": "New",
       "description": "Start a new eBook",
       "url": "/make-ebook?action=new",
-      "icons": [{ "src": "/makeebook-icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/android-chrome-192x192.png", "sizes": "192x192" }]
     }
   ],
   "related_applications": [],
